# kvs-producer-public

./: CMakeLists.txt  README.md
conf.d/: gstreamer.json
src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
src/controller/: StaticController.hpp  UserController.hpp
src/dto/: DTOs.hpp
src/gst/: MyGstreamer.cpp
src/websocket/: WSListener.cpp  WSListener.hpp
www/: functions.js  index.html  style.css
